# sunfounder_stt

./: .gitignore  CLAUDE.md  Dockerfile  README.md  __init__.py  brick_compose.yaml  brick_config.yaml  pyproject.toml  stt_whisper.py
docs/: requirements.txt
examples/: stt_whisper_local.py  stt_whisper_online.py
sunfounder_stt/: __init__.py  _alsa_capture.py  _logger.py  _pulse_audio_capture.py  _stt_base.py  _utils.py  _version.py  stt_whisper.py
